Fix: Change content 2's section to wrap
Wanted to make this section with these boxes
more responsive in how they act when resizing the
browser window's width. So I had to play around
with the flex-wrap: wrap property and where to
place that with. there were some issues with how
it would space itself, so I had to set it to
'flex: auto' to give it the default grow, shrink,
and flex-basis properties. This has it grow and
shrink equally and base that on the given width
which in this case defaults to its container size.

--- a/style.css
+++ b/style.css
@@ -84,16 +84,23 @@ button {
     background-color: red;
 }
 
+.section 2{
+
+}
+
 .content_2 {
     margin-bottom: 80px;
     text-align: center;
     display: flex;
     flex-direction: column;
+    flex: auto;
     gap: 20px;
 }
 
 .section_2_content {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
 
 .boxes {
@@ -101,6 +108,10 @@ button {
     flex-direction: column;
     align-items: center;
     gap: 10px;
+}
+
+.boxes p {
+    max-width: 200px;
 }
 
 .styled_box {
